Closed Bug 529192 Opened 16 years ago Closed 16 years ago

crash [@ nsXULListCellAccessible::GetAttributesInternal(nsIPersistentProperties*)]

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- .7-fixed

People

(Reporter: davidb, Assigned: davidb)

Details

(Keywords: crash, verified1.9.2, Whiteboard: [tb31needed][rc1 build 2 fixed])

Crash Data

Attachments

(1 file)

Attached patch trivial fixSplinter Review
GetTable can return without a valid table, we missed one spot where we check this. E.g. http://crash-stats.mozilla.com/report/index/06a1f27c-ce4c-4436-8a3c-960bb2091110
Attachment #412751 - Attachment is patch: true
Attachment #412751 - Attachment mime type: application/octet-stream → text/plain
Attachment #412751 - Flags: review?(surkov.alexander)
Attachment #412751 - Flags: review?(marco.zehe)
Attachment #412751 - Flags: review?(surkov.alexander) → review+
Comment on attachment 412751 [details] [diff] [review] trivial fix > // "table-cell-index" attribute > nsCOMPtr<nsIAccessibleTable> table; > GetTable(getter_AddRefs(table)); >+ if (!table) >+ return NS_OK; failure and warn, r=me with this
Comment on attachment 412751 [details] [diff] [review] trivial fix r=me, with the same nit as Alex, obviously :)
Attachment #412751 - Flags: review?(marco.zehe) → review+
(In reply to comment #1) > (From update of attachment 412751 [details] [diff] [review]) > > > // "table-cell-index" attribute > > nsCOMPtr<nsIAccessibleTable> table; > > GetTable(getter_AddRefs(table)); > >+ if (!table) > >+ return NS_OK; > > failure and warn, r=me with this Is there a reason we expect GetTable to always succeed? Note we don't fail and warn in 3 other places in this same file ;)
Yes, because it's a problem when XUL list cell accessible hasn't XUL listbox accessible. If it's wrong markup then we shouldn't create cell accessible in this case. If it's invalidation problem then we should address it. I think we should warn into console to know we have problems and when it happens.
OK so we expect GetTable to always succeed inside nsXULListCellAccessible? So shall I add fails in the other 3 places? I'm not a huge fan of warnings since the console is already so noisy/unusable.
(In reply to comment #5) > OK so we expect GetTable to always succeed inside nsXULListCellAccessible? So > shall I add fails in the other 3 places? right > I'm not a huge fan of warnings since the console is already so noisy/unusable. and that means we have lot of work and it shouldn't mean we should hide problems :)
(In reply to comment #6) > (In reply to comment #5) > and that means we have lot of work and it shouldn't mean we should hide > problems :) I agree on one level, but I won't notice the warnings. I'll add them.
Our accessibility code is probably the closest thing to a run-time XUL validator Mozilla has :)
(In reply to comment #8) > Our accessibility code is probably the closest thing to a run-time XUL > validator Mozilla has :) Haha :) I hope we'll fix this in the future.
Silly me, we already have bug 516047 with the 192 fix.
Assignee: nobody → bolterbugz
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment on attachment 412751 [details] [diff] [review] trivial fix This bug recently surfaced in Thunderbird 3.1b2pre, see: http://crash-stats.mozilla.com/report/list?range_value=2&range_unit=weeks&signature=nsXULListCellAccessible%3A%3AGetAttributesInternal(nsIPersistentProperties*)&version=Thunderbird%3A3.1b2pre Specific report: http://crash-stats.mozilla.com/report/index/311ba50e-bee1-4d7d-b50d-855fe2100413 Requesting to land this on 1.9.2.5 ASAP. Has been baking on trunk and been known to fix the problem there. Trivial fix.
Attachment #412751 - Flags: approval1.9.2.5?
Severity: normal → critical
Keywords: crash
Summary: crash [nsXULListCellAccessible::GetAttributesInternal(nsIPersistentProperties*)] → crash [@ nsXULListCellAccessible::GetAttributesInternal(nsIPersistentProperties*)]
On Marco's recommendation, as this can apparently break some screen readers, I've checked this into Thunderbird's relbranch on mozilla-1.9.2 for Thunderbird 3.1 RC 1: http://hg.mozilla.org/releases/mozilla-1.9.2/rev/96d514d88fb1 We'll look for the formal 1.9.2 landing later.
Whiteboard: [tb31needs][rc1 build 2 fixed][needs approval 1.9.2.5 for TB 3.1.1]
(In reply to comment #13) > On Marco's recommendation, as this can apparently break some screen readers, > I've checked this into Thunderbird's relbranch on mozilla-1.9.2 for Thunderbird > 3.1 RC 1: Very cool, thanks! I'll let the user who reported this issue with their screen reader to test RC1 and report to me if they still experience problems. I expect not, though.
(In reply to comment #14) > (In reply to comment #13) > > On Marco's recommendation, as this can apparently break some screen readers, > > I've checked this into Thunderbird's relbranch on mozilla-1.9.2 for Thunderbird > > 3.1 RC 1: > > Very cool, thanks! I'll let the user who reported this issue with their screen > reader to test RC1 and report to me if they still experience problems. I expect > not, though. As expected, the user could confirm that this problem is fixed for her in Thunderbird 3.1RC1. Thanks guys for taking this patch on your relbranch!
Comment on attachment 412751 [details] [diff] [review] trivial fix a=LegNeato for 1.9.2.6. Please land this on mozilla-1.9.2 default. Code freeze is on 2010-06-25.
Attachment #412751 - Flags: approval1.9.2.5? → approval1.9.2.6+
Whiteboard: [tb31needs][rc1 build 2 fixed][needs approval 1.9.2.5 for TB 3.1.1] → [tb31needed][rc1 build 2 fixed]
Marco, can you verify this is fixed in a 1.9.2 build (Firefox or Mozilla)?
As per my comment #15, and due to the fact that I landed the patch on the default 1.9.2 branch afterwards, too, declaring this verified fixed in 1.9.2.6.
Keywords: verified1.9.2
Crash Signature: [@ nsXULListCellAccessible::GetAttributesInternal(nsIPersistentProperties*)]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: