Bug 529192 - crash [nsXULListCellAccessible::GetAttributesInternal(nsIPersistentProperties*)] r=MarcoZ,surkov